<resources>
    <string name="app_name">Thai League 1 Stadium</string>
    <string-array name="teamT1">
        <item>บีจี ปทุม ยูไนเต็ด(BGPU)</item>
        <item>บุรีรัมย์ ยูไนเต็ด(BRUTD)</item>
        <item>ทรู แบงค็อก ยูไนเต็ด(BUFC)</item>
        <item>ชลบุรี เอฟซี(CHON)</item>
        <item>เชียงใหม่ ยูไนเต็ด(CMUTD)</item>
        <item>สิงห์ เชียงราย ยูไนเต็ด(CRUTD)</item>
        <item>ขอนแก่น ยูไนเต็ด(KKUTD)</item>
        <item>เอสซีจี เมืองทอง ยูไนเต็ด(MTUTD)</item>
        <item>หนองบัว พิชญ เอฟซี(NPFC)</item>
        <item>นครราชสีมา มาสด้า เอฟซี(NRMFC)</item>
        <item>โปลิศ เทโร เอฟซี(POLFC)</item>
        <item>พีที ประจวบ เอฟซี(PTPRACH)</item>
        <item>ราชบุรี มิตรผล เอฟซี(RBMFC)</item>
        <item>สมุทรปราการ ซิตี้(SPC)</item>
        <item>สุพรรณบุรี เอฟซี(SPFC)</item>
        <item>การท่าเรือ เอฟซี(TPFC)</item>
    </string-array>
    <string-array name="stadium">
        <item>ลีโอ สเตเดียม</item>
        <item>ช้าง อารีนา</item>
        <item>ทรู สเตเดี้ยม (ม.ธรรมศาสตร์ รังสิต)</item>
        <item>ชลบุรี สเตเดียม</item>
        <item>สมโภชเชียงใหม่ 700 ปี</item>
        <item>สิงห์ สเตเดียม</item>
        <item>องค์การบริหารส่วนจังหวัดขอนแก่น</item>
        <item>เอสซีจี สเตเดียม</item>
        <item>พิชญ สเตเดียม</item>
        <item>เฉลิมพระเกียรติ 80 พรรษา</item>
        <item>สนามกีฬาบุณยะจินดา</item>
        <item>สามอ่าว สเตเดียม</item>
        <item>มิตรผล สเตเดียม</item>
        <item>สนามกีฬาจังหวัดสมุทรปราการ \n(เคหะเมืองใหม่บางพลี)</item>
        <item>กีฬากลาง จ.สุพรรณบุรี</item>
        <item>แพท สเตเดียม</item>
    </string-array>
    <string name="about">
        \t \t \t \t เนื่องจากในปัจจุบันแฟนบอลไทยลีกมีเป็นจำนวนมาก แฟนบอลส่วนหนึ่งดูการแข่งขันผ่านการถ่ายทอดสด แต่ยังมีแฟนบอลจำนวนมากที่ไปเชียร์ถึงขอบสนาม
        เราจึงได้สร้างแอปพลิเคชันนี้มาเพื่อแสดงข้อมูลและตำแหน่งของสนามฟุตบอลในไทยลีก(1) และสถานที่ท่องเที่ยวใกล้เคียงสนามแข่งขัน งานวิจัยนี้ทำมาเพื่อให้แฟนฟุตบอลไทยลีก(1)
        หรือบุคคลทั่วไปที่ให้ความสนใจได้ตามไปเชียร์ทีมที่ตัวเองชื่นชอบ ช่วยให้ไม่หลงทางเพื่อไปยังสนามที่ถูกต้อง เราได้เล็งเห็นว่าแฟนบอลที่เดินทางมาไกลเพื่อมาเชียร์ฟุตบอล
        หลังจากที่จบการแข่งขันแฟนบอลจะไปสถานที่ท่องเที่ยวในจังหวัดของทีมเจ้าบ้าน เราจึงได้สร้างแผนที่สถานที่ท่องเที่ยวใกล้เคียงสนาม
    </string>
    <string name="thx">
        <b>ข้อมูลฟุตบอลไทยลีกจาก</b> \n
        www.thaileague.co.th \n
        www.ballthai.com \n

        <b>ข้อมูลสถานที่ท่องเที่ยวจาก</b> \n
        www.paiduaykan.com\n
        www.travel.trueid.net

    </string>
    <string name="c_1">
        <b>นายยุทภูมิ บุญมาก</b> \n
        <b>รหัสนักศึกษา </b> 62122201008 \n
        สาขา วิทยาการคอมพิวเตอร์ \n
        คณะ วิทยาศาสตร์และเทคโนโลยี \n
        มหาลัยราชภัฏสวนสุนันทา \n
        <b>E-mail</b> s62122201008@ssru.ac.th
    </string>
    <string name="c_2">
        <b>นางสาวมินตรา สนประเสริฐ</b> \n
        <b>รหัสนักศึกษา </b> 62122201020 \n
        สาขา วิทยาการคอมพิวเตอร์ \n
        คณะ วิทยาศาสตร์และเทคโนโลยี \n
        มหาลัยราชภัฏสวนสุนันทา \n
        <b>E-mail</b> s62122201022@ssru.ac.th
    </string>
    <string name="c_3">
        <b>นางสาวธันยาภรณ์ สีมาชัย</b> \n
        <b>รหัสนักศึกษา </b> 62122201022 \n
        สาขา วิทยาการคอมพิวเตอร์ \n
        คณะ วิทยาศาสตร์และเทคโนโลยี \n
        มหาลัยราชภัฏสวนสุนันทา \n
        <b>E-mail</b> s62122201022@ssru.ac.th
    </string>
    <string name="bgpu_info">
        \t \t สนามลีโอ สเตเดี้ยม สนามสำหรับใช้ในการแข่งขันฟุตบอลเกมเหย้าของสโมสรฟุตบอล บีจี ปทุม ยูไนเต็ด (ไทยลีก 1) และ ราชประชา เอฟซี (ไทยลีก 2)
        เป็นสนามที่มีเก้าอี้สนามกีฬามาตรฐาน สามารถรองรับผู้ชมได้ถึง 10,114 ที่นั่ง ตั้งอยู่ในบริเวณบีจีซี ปทุมธานีกล๊าส โดยสนามฟุตบอลแห่งนี้เป็นสนามหญ้าจริง ขนาด 104 x 68 เมตร
        ได้รับการรับรองมาตรฐานจากสหพันธ์ฟุตบอลนานาชาติ (FIFA) และจากสหพันธ์ฟุตบอลแห่งเอเชีย (AFC) ในระดับ A Class \n \n
        \t \t <b>ที่ตั้ง : </b>305 ถนน รังสิต - นครนายก ตำบล บึงยี่โถ อำเภอธัญบุรี ปทุมธานี 12130 \n
        \t \t <b>ความจุ : </b>13,000 ที่นั่ง \n
        \t \t <b>บัตรเข้าชมเจ้าบ้าน : </b>ราคา 30, 60 และ 100 บาท \n
        \t \t <b>บัตรเข้าชมทีมเยือน : </b>ราคา 150 บาท \n
    </string>
    <string name="aBgpu1">
        <b>(ระยะห่างจากสนาม 20.5 กม.)</b> \n
        \t \t \t \t วัดปัญญานันทาราม ตั้งอยู่ที่ ตำบลคลองหก อำเภอคลองหลวง จังหวัด ปทุมธานี
        เป็นวัดที่มีชื่อเสียงและเป็นที่รู้จักว่าเป็นวัดที่หลวงพ่อปัญญานันทภิกขุ อดีตเจ้าอาวาสวัดชลประทานรังสฤษฏ์
        เป็นผู้ก่อตั้งและสร้างขึ้นโดยมุ่งหวังให้เป็นมรดธรรมและสถานที่ปฏิบัติธรรม สิ่งก่อสร้างที่โดดเด่น คือ
        เจดีย์พุทธคยาจำลองถอดแบบมาจากประเทศอินเดีย และอีกหนึ่งไฮไลท์ที่สำคัญ คือ ภาพปริศนาธรรมแบบ 3 มิติ
        หนึ่งเดียวในโลกที่จัดแสดงอยู่ด้านล่างเจดีย์พุทธคยา เปิดให้นักท่องเที่ยวเข้าไปถ่ายรูป โดยแต่ละภาพจะมีความหมายแฝงไปด้วยคติธรรมสอนใจในเรื่องของอริยสัจ4
        ที่เปิดให้เข้าชมฟรี หากใครที่มีจิตศรัทธาก็สามารถหยอดตู้ทำบุญได้
    </string>
    <string name="aBgpu2">
        <b>(ระยะห่างจากสนาม 1.1 กม.)</b> \n
        \t \t \t \t ดรีมเวิลด์ เป็นสวนสนุก ในประเทศไทย ตั้งอยู่ที่ กิโลเมตรที่ 7 เส้นทางสายรังสิต-นครนายก บริเวณคลองสาม
        มีเนื้อที่ประมาณ 160 ไร่ ตำบลบึงยี่โถ อำเภอธัญบุรี จังหวัดปทุมธานี มีสถานที่พักผ่อน และบริเวณที่ให้ความบันเทิงมากมาย เช่น
        ดรีมเวิลด์พลาซ่า ดรีมการ์เด้น แฟนตาซีแลนด์ และแอดเวนเจอร์แลนด์  เมืองหิมะ เป็นต้น นอกจากนี้ยังมีขบวนพาเหรดนานาชาติ รถไฟเหาะตีลังกา
        หนูลมกรด ซูเปอร์สแปลช ทอร์นาโด แกรนด์แคนยอน และอื่น ๆ อีกมากมาย
    </string>
    <string name="aBgpu3">
        <b>(ระยะห่างจากสนาม 18.3 กม.)</b>\n
        \t \t \t \t ชมอุโบสถ์สีเงินสวยโดดเด่นในย่านปทุมธานี ไม่ไกลจากกรุงเทพ  ที่ วัดดอนใหญ่ ลำลูกกาคลอง 8
        อุโบสถมีสีเงินและสีขาวสะท้อนแดดระยิบระยับ ด้านล่างของฐานอุโบสถล้อมรอบด้วยกลีบดอกบัวสีทองสวยงาม
        ภายในอุโบสถประดิษฐานหลวงพ่อใจดีมั่งมีศรีสุข ให้กราบไหว้เพื่อความเป็นสิริมงคล ยังมีอุโบสถหลังเก่ามีสมเด็จพระพุฒาจารย์โตองค์จำลอง
        ประดิษฐานหน้าอุโบสถให้กราบไหว้ นอกจากนี้ทางวัดยังมีรูปปั้นไอ้ไข่ ให้ประชาชนที่แวะเวียนเข้ามาเที่ยววัดได้ขอโชคขอลาภ และมีอ่างน้ำมนต์ศักดิ์สิทธิ์
        เพื่อให้นักเสี่ยงโชคพิสูจน์ความเฮง
    </string>
    <string name="brutd_info">
        \t\t ช้างอารีนา (อังกฤษ: Chang Arena, ชื่อเดิม: ไอ-โมบาย สเตเดียม) มีชื่ออย่างไม่เป็นทางการว่า ธันเดอร์คาสเซิลสเตเดียม (อังกฤษ: Thunder Castle Stadium)
        เป็นสนามกีฬาที่สร้างขึ้นเพื่อใช้เป็นสนามเหย้าของสโมสรฟุตบอลบุรีรัมย์ ยูไนเต็ด (ไทยลีก 1) ตั้งอยู่ที่ตำบลในเมือง อำเภอเมืองบุรีรัมย์ จังหวัดบุรีรัมย์ สนามแห่งนี้มีความจุ 24,000 ที่นั่ง
        (ในปี พ.ศ. 2557 ได้ต่อเติมเป็น 32,600 ที่นั่ง) โครงสร้างประกอบด้วยเหล็กและไฟเบอร์ ซึ่งสร้างด้วยงบประมาณกว่า 500 ล้านบาท
        โดยเป็นเงินสนับสนุนภายใต้สัญญาการกำหนดชื่อจากไอ-โมบายและบางส่วนของนายเนวิน ชิดชอบ จัดเป็นสนามฟุตบอลที่ได้มาตรฐานแห่งแรกและแห่งเดียวในประเทศไทยที่ไม่มีลู่วิ่งคั่นสนามและผ่านมาตรฐานระดับโลกจากสหพันธ์ฟุตบอลระหว่างประเทศ,
        มาตรฐานสนามกีฬาระดับเอจากสมาพันธ์ฟุตบอลเอเชีย และสหพันธ์ฟุตบอลอาเซียน และยังได้บันทึกลงกินเนสบุ๊คว่าเป็นสนามฟุตบอลในระดับฟีฟ่าแห่งเดียวในโลกที่ใช้เวลาก่อสร้างน้อยที่สุดในโลกคือ 256 วัน \n \n
        \t\t <b>ที่ตั้ง : </b>444 หมู่ที่ 15 ตำบลอิสาณ อำเภอเมืองบุรีรัมย์ จังหวัดบุรีรัมย์ \n
        \t\t <b>ความจุ : </b>32,600 ที่นั่ง \n
        \t\t <b>บัตรเข้าชมเจ้าบ้าน : </b>ราคา 120, 150, 200, และ 600 บาท  \n
        \t\t <b>บัตรเข้าชมทีมเยือน : </b>ราคา 200 บาท  \n
        \t\t ทีมเยือนได้โควตาจำนวน 1,961 ที่นั่ง  \n
    </string>
    <string name="aBrutd1">
        <b>(ระยะห่างจากสนาม 63.8 กม.)</b> \n
        \t \t \t \t อุทยานประวัติศาสตร์พนมรุ้ง หรือ ปราสาทหินพนมรุ้ง
        ตั้งอยู่ในเขตอำเภอเฉลิมพระเกียรติ จังหวัดบุรีรัมย์ ห่างจากตัวเมืองบุรีรัมย์ลงมาทางทิศใต้ประมาณ 77 กิโลเมตร
        เป็นโบราณสถานที่ตั้งอยู่บนเขาพนมรุ้งยอดภูเขาไฟที่ดับสนิทแล้ว สูงประมาณ 200 เมตรจากพื้นราบ คำว่า พนมรุ้ง
        มาจากภาษาเขมร คำว่า วนํรุง แปลว่าภูเขาใหญ่ สร้างขึ้นโดยมีรูปแบบของศิลปะเขมรโบราณที่มีความงดงามมากที่สุดแห่งหนึ่ง
        ปราสาทหิน พนมรุ้งเป็นหนึ่งในปราสาทหินขอมของไทยที่มีชื่อเสียงมากที่สุด เป็นสถานที่ท่องเที่ยวที่สำคัญของจังหวัดบุรีรัมย์และถือเป็นสัญลักษณ์ที่สำคัญของจังหวัดบุรีรัมย์
    </string>
    <string name="aBrutd2">
        <b>(ระยะห่างจากสนาม 4.0 กม.)</b> \n
        \t \t \t \t วนอุทยานเขากระโดง  ตั้งอยู่ในอำเภอเมืองบุรีรัมย์ เป็นปากปล่องภูเขาไฟที่ดับสนิทแล้วรอบ
        บริเวณปกคลุมด้วยป่าไม้ที่อุดมสมบูรณ์  สิ่งที่น่าสนใจในวนอุทยานเขากระโดง คือ  ปากปล่องภูเขาไฟเขากระโดงซึ่งดับสนิท
        อายุประมาณ 3 แสนถึง 9 แสนปี  บนเขากระโดง เป็นที่ประดิษฐาน พระสุภัทรบพิตร พระพุทธรูปคู่เมืองของบุรีรัมย์
        ซึ่งเป็นพระพุทธรูปก่ออิฐฉาบปูนขนาดใหญ่ หันหน้าไปทางทิศเหนือ ภายในเศียรบรรจุพระธาตุ
        จากจุดที่ตั้งขององค์พระสามารถมองเห็นทัศนียภาพของตัวเมืองบุรีรัมย์ได้
    </string>
    <string name="aBrutd3">
        <b>(ระยะห่างจากสนาม 4.6 กม.)</b> \n
        \t \t \t \t ถนนคนเดินเซราะกราว  ถนนคนเดินสายวัฒนธรรมที่เป็นอัตตลักษณ์ของบุรีรัมย์
        เปิดทุกวันเสาร์-อาทิตย์ ตั้งแต่เวลา 17.00-22.00 น. ณ บริเวณหน้าจวนผู้ว่าราชการจังหวัด
        จัดขึ้นเพื่อให้ลานวัฒนธรรม เป็นแหล่งให้ประชาชนในจังหวัดบุรีรัมย์มาพบปะกัน รวมทั้งนำสินค้าผลผลิตในชุมชนมาจำหน่าย
        นำศิลปวัฒนธรรมที่ดีงามและน่าสนใจของแต่ละอำเภอมาแสดง นำภูมิปัญญาของท้องถิ่นมาสาธิต
        ให้ผู้ร่วมเที่ยวชมงานได้ร่วมกันแลกเปลี่ยนเรียนรู้ซึ่งกันและกัน โดยมีการจัดแสดงการสาธิต และจัดจำหน่ายสินค้า
        ผลิตภัณฑ์ ภูมิปัญญาต่างๆ ของฝากของที่ระลึก อาหารปรุงสำเร็จ ตลาดสีเขียว สินค้าเบ็ดเตล็ด และชมการแสดง
        ศิลปหัตถกรรมที่เป็นเอกลักษณ์ของบุรีรัมย์
    </string>
    <string name="butd_info">
        \t\t สนามกีฬาธรรมศาสตร์ รังสิต เป็นสนามกีฬาที่สร้างขึ้น เพื่อใช้ในการแข่งขันกีฬาเอเชียนเกมส์ ครั้งที่ 13, เฟสปิกเกมส์ ครั้งที่ 7 ที่ กรุงเทพมหานคร
        และ ราชมงคลเกมส์ ครั้งที่ 31 ที่ มหาวิทยาลัยเทคโนโลยีราชมงคลพระนครเป็นเจ้าภาพและงานกรีฑาสวนกุหลาบสัมพันธ์ สนามแห่งนี้มีความจุทั้งหมด 20,000 ที่นั่ง
        เป็นสนามกีฬากลางแจ้งมาตรฐานขนาดใหญ่พร้อมลู่วิ่งยางสังเคราะห์ จำนวน 9 ช่องวิ่ง สำหรับเล่นและแข่งฟุตบอล กรีฑา และกีฬากลางแจ้งอื่นๆ มีไฟฟ้าส่องสว่างระดับมาตรฐานการถ่ายทอดทางโทรทัศน์
        มีอัฒจันทร์สำหรับนั่งชมโดยรอบ และมีหลังคาทั้งสองฝั่งสนาม ความจุของสนาม 20,000 คน สนามกีฬาธรรมศาสตร์ รังสิต อยู่ในการดูแลรับผิดชอบของ มหาวิทยาลัยธรรมศาสตร์ ศูนย์รังสิต
        และถือเป็นสนามเหย้าของสโมสรฟุตบอล ทรู แบงค็อก ยูไนเต็ด (True Bangkok United) (ไทยลีก 1) นับตั้งแต่ปี 2559 \n \n
        \t\t <b>ที่ตั้ง : </b>99 หมู่ 18 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120 \n
        \t\t <b>ความจุ : </b>19,375 ที่นั่ง \n
        \t\t <b>บัตรเข้าชมเจ้าบ้าน : </b>ราคา 100 และ  150 บาท  \n
        \t\t <b>บัตรเข้าชมทีมเยือน : </b>ราคา 200 บาท  \n
        \t\t ทีมเยือนได้โควตาจำนวน 5,953 ที่นั่ง  \n
    </string>
    <string name="aSpfc1">
        <b>(ระยะห่างจากสนาม 26.2 กม.)</b> \n
        \t \t \t \t ประกอบด้วยพระบรมราชานุสาวรีย์สมเด็จพระนเรศวรมหาราชทรงพระคชาธารออกศึก และองค์เจดีย์ยุทธหัตถี สมเด็จพระนเรศวรมหาราชทรงสร้างเจดีย์ขึ้น
        เพื่อเฉลิมฉลองชัยชนะในสงครามยุทธหัตถีที่ทรงมีต่อพระมหาอุปราชาแห่งพม่า ต่อมากองทัพบกได้บูรณปฏิสังขรณ์องค์พระเจดีย์ขึ้นใหม่ โดยสร้างเป็นเจดีย์แบบลังกาทรงกลมใหญ่ สูง 66 เมตร
        ฐานกว้างด้านละ 36 เมตร ครอบพระเจดีย์องค์เดิมไว้
    </string>
    <string name="aSpfc2">
        <b>(ระยะห่างจากสนาม 31.5 กม.)</b> \n
        \t \t \t \t พระพุทธรูปแกะสลักหน้าผาหิน มีชื่อว่า พระพุทธปุษยคีรีศรีสุวรรณภูมิ หรือ หลวงพ่ออู่ทอง  ตั้งอยู่ใกล้วัดเขาทำเทียม ที่หน้าผามังกรบิน  ณ พุทธมหาสถานเมืองโบราณอู่ทอง
        อำเภออู่ทอง  องค์หลวงพ่ออู่ทอง มีความสูง  108 เมตร ฐานกว้าง  88 เมตร หน้าตักกว้าง  65 เมตร อยู่ในพื้นที่ราว 100 ไร่  เป็นพระพุทธรูป แกะสลักหน้าผาใหญ่ที่สุด ในโลก
        ด้วยความสวยงามแปลกตาและหน้าผาหินที่รายล้อมองค์พระพุทธรูป ทำให้นักท่องเที่ยวต่าง แวะเวียนมาทำบุญ ถ่ายภาพอย่างไม่ขาดสาย

    </string>
    <string name="aSpfc3">
        <b>(ระยะห่างจากสนาม 32.5 กม.)</b> \n
        \t \t \t \t วัดที่สวยงามตั้งอยู่บนยอดเขา ภายในประดิษฐานรอยพระพุทธบาทมงคล 108 ประการ อายุนับพันปี สร้างด้วยหินทรายแดง โดยกรมศิลปากรได้ขึ้นทะเบียนเป็นโบราณวัตถุและ
        สร้างมณฑปทรงไทยสวยวิจิตรครอบไว้  ทางวัดเขาดีสลักปรับปรุงภูมิทัศน์บนยอดเขา มองเห็นวิวทิวทัศน์สวยงามในเขตอำเภออู่ทองโดยรอบ
    </string>
</resources>